<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:configChanges="keyboardHidden|orientation|screenSize"
    android:background="@color/appBackGroundColor"
    tools:context=".Views.DetailsActivity">

    <ImageView
        android:id="@+id/imgeViewCountryDetails"
        android:layout_width="115dp"
        android:layout_height="0dp"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/txtviewcntrynamedetails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ca" />

    <TextView
        android:id="@+id/txtviewCasesdetails"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:layout_marginTop="53dp"
        android:layout_marginBottom="54dp"
        android:text="@string/txtviewCasesdetails"
        app:layout_constraintBottom_toBottomOf="@+id/txtviewdeathsdetails"
        app:layout_constraintEnd_toStartOf="@+id/txtviewcntrynamedetails"
        app:layout_constraintStart_toStartOf="@+id/txtviewuserratingdetails"
        app:layout_constraintTop_toBottomOf="@+id/imgeViewCountryDetails" />

    <TextView
        android:id="@+id/txtviewdeathsdetails"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="63dp"
        android:text="@string/txtviewdeathsdetails"
        app:layout_constraintBottom_toBottomOf="@+id/txtviewuserratingdetails"
        app:layout_constraintEnd_toEndOf="@+id/txtviewCasesdetails"
        app:layout_constraintTop_toBottomOf="@+id/txtviewcntrynamedetails" />

    <TextView
        android:id="@+id/txtviewuserratingdetails"
        android:layout_width="84dp"
        android:layout_height="24dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="300dp"
        android:text="@string/txtviewuserratingdetails"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtviewusernotesdetails"
        android:layout_width="0dp"
        android:layout_height="109dp"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:layout_marginBottom="85dp"
        android:text="@string/txtviewusernotesdetails"
        app:layout_constraintBottom_toBottomOf="@+id/btndeletedetails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtviewuserratingdetails" />

    <Button
        android:id="@+id/btnbackdetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#BF7575"
        android:text="@string/btnbackdetails"
        app:layout_constraintBottom_toBottomOf="@+id/btneditdetails"
        app:layout_constraintEnd_toStartOf="@+id/imgeViewCountryDetails"
        app:layout_constraintStart_toStartOf="@+id/txtviewdeathsdetails"
        app:layout_constraintTop_toTopOf="@+id/btneditdetails" />

    <Button
        android:id="@+id/btneditdetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:layout_marginBottom="117dp"
        android:background="#AADA96"
        android:text="@string/btneditdetails"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtviewcntrynamedetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="146dp"
        android:text="@string/txtviewcntrynameedit"
        app:layout_constraintStart_toStartOf="@+id/imgeViewCountryDetails"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btndeletedetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginBottom="46dp"
        android:text="@string/btndeletedetails"
        app:layout_constraintBottom_toTopOf="@+id/btnbackdetails"
        app:layout_constraintStart_toEndOf="@+id/btnbackdetails" />
</androidx.constraintlayout.widget.ConstraintLayout>