<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:configChanges="keyboardHidden|orientation|screenSize"
    android:background="@color/appBackGroundColor"
    tools:context=".Views.EditActivity">

    <Button
        android:id="@+id/buttonOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="81dp"
        android:layout_marginRight="81dp"
        android:layout_marginBottom="67dp"
        android:background="#AADA96"
        android:text="@string/buttonOk"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextUserinfo"
        android:layout_width="283dp"
        android:layout_height="124dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginBottom="92dp"
        android:ems="10"
        android:hint="@string/editTextUserinfo"
        android:inputType="text"
        android:lineSpacingExtra="8sp"
        android:singleLine="false"
        app:layout_constraintBottom_toTopOf="@+id/buttonOk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:id="@+id/seekBarrating"
        style="@style/Widget.AppCompat.SeekBar"
        android:layout_width="267dp"
        android:layout_height="123dp"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:layout_marginBottom="53dp"
        android:max="100"
        android:maxHeight="6dip"
        android:minHeight="6dip"
        android:paddingLeft="30px"
        android:paddingTop="10px"
        android:paddingRight="30px"
        android:paddingBottom="10px"
        android:progress="@android:integer/config_mediumAnimTime"
        app:layout_constraintBottom_toTopOf="@+id/editTextUserinfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/seekbarvaluetxtview"
        android:layout_width="96dp"
        android:layout_height="33dp"
        android:layout_marginStart="163dp"
        android:layout_marginLeft="163dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="176dp"
        android:layout_marginRight="176dp"
        android:layout_marginBottom="16dp"
        android:text="@string/seekbarvaluetxtview"
        app:layout_constraintBottom_toTopOf="@+id/seekBarrating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtviewcntrynameedit" />

    <ImageView
        android:id="@+id/imgeViewCountryDetails"
        android:layout_width="124dp"
        android:layout_height="124dp"
        android:layout_marginStart="39dp"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="84dp"
        app:layout_constraintBottom_toTopOf="@+id/seekBarrating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ca" />

    <Button
        android:id="@+id/btncanceledit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginBottom="67dp"
        android:background="#BF7575"
        android:text="@string/btncanceledit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtviewcntrynameedit"
        android:layout_width="114dp"
        android:layout_height="31dp"
        android:layout_marginStart="71dp"
        android:layout_marginLeft="71dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginBottom="139dp"
        android:text="@string/txtviewcntrynameedit"
        app:layout_constraintBottom_toTopOf="@+id/seekBarrating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgeViewCountryDetails"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>