<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:configChanges="keyboardHidden|orientation|screenSize"
    android:background="@color/appBackGroundColor"
    tools:context=".Views.MainActivity">

    <Button
        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginLeft="61dp"
        android:layout_marginBottom="69dp"
        android:background="#BF7575"
        android:text="@string/exitButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="483dp"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:background="#B6AAAA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:itemCount="10"
        tools:listitem="@layout/list_item" />

    <Button
        android:id="@+id/btnAddMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="78dp"
        android:layout_marginRight="78dp"
        android:background="#AADA96"
        android:text="@string/btnAddMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittxtmainsearch" />

    <EditText
        android:id="@+id/edittxtmainsearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:layout_marginBottom="17dp"
        android:ems="10"
        android:hint="@string/edittxtmainsearch"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/exitButton"
        app:layout_constraintEnd_toEndOf="@+id/btnAddMain" />

</androidx.constraintlayout.widget.ConstraintLayout>